--- a/index.html
+++ b/index.html
@@ -1,270 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Real Financial Services</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-  <style>
-    body {
-      background-color: #fff;
-      color: #333;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    /* Navbar */
-    .navbar {
-      background-color: #ff6600;
-    }
-    .navbar-brand {
-      font-weight: bold;
-      font-size: 1.8rem;
-      color: white !important;
-    }
-    /* Carousel */
-    .carousel-caption {
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 20px;
-      border-radius: 10px;
-    }
-    /* Buttons */
-    .btn-orange {
-      background-color: #ff6600;
-      border: none;
-      color: white;
-      padding: 12px 25px;
-      font-size: 1.2rem;
-      font-weight: 600;
-      border-radius: 30px;
-      transition: background-color 0.3s ease, transform 0.3s ease;
-      cursor: pointer;
-    }
-    .btn-orange:hover {
-      background-color: #e65c00;
-      transform: scale(1.1);
-      color: #fff;
-      text-decoration: none;
-    }
-    /* Footer */
-    footer {
-      background-color: #222;
-      color: #bbb;
-      padding: 15px 10px;
-      text-align: center;
-    }
-    /* Section Titles */
-    h2.section-title {
-      margin-top: 50px;
-      margin-bottom: 30px;
-      font-weight: 700;
-      color: #ff6600;
-      text-align: center;
-    }
-    /* Contact Form */
-    .form-control:focus {
-      border-color: #ff6600;
-      box-shadow: 0 0 8px #ff6600;
-    }
-    /* Testimonials */
-    .testimonial-card {
-      background-color: #ff6600;
-      color: white;
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      margin: 15px;
-      min-height: 180px;
-    }
-    /* Smooth scroll behavior */
-    html {
-      scroll-behavior: smooth;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">Real Financial Services</a>
-    </div>
-  </nav>
-
-  <!-- Carousel -->
-  <div id="mainCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4500">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://images.unsplash.com/photo-1581091870620-dba4c89f7a91?fit=crop&w=1200&q=80" class="d-block w-100" alt="Funeral Cover" />
-        <div class="carousel-caption d-none d-md-block">
-          <h2>Funeral Cover</h2>
-          <p>Secure peace of mind for your loved ones.</p>
-          <a href="#funeral" class="btn btn-orange">Read More</a>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1511988617509-a57c8a288659?fit=crop&w=1200&q=80" class="d-block w-100" alt="Life Cover" />
-        <div class="carousel-caption d-none d-md-block">
-          <h2>Life Cover</h2>
-          <p>Protect your family’s future today.</p>
-          <a href="#life" class="btn btn-orange">Read More</a>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1554224155-4b6e6a0f33f1?fit=crop&w=1200&q=80" class="d-block w-100" alt="Retirement" />
-        <div class="carousel-caption d-none d-md-block">
-          <h2>Retirement Annuity</h2>
-          <p>Plan now, relax later. Your retirement, secured.</p>
-          <a href="#retirement" class="btn btn-orange">Read More</a>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-
-  <!-- Sections -->
-  <div class="container my-5">
-
-    <!-- Funeral Cover Section -->
-    <section id="funeral">
-      <h2 class="section-title">Funeral Cover</h2>
-      <p>
-        At Real Financial Services, we understand how important it is to secure peace of mind for your loved ones.
-        Our funeral cover plans provide financial support in times of loss, helping families to focus on healing.
-      </p>
-    </section>
-
-    <!-- Life Cover Section -->
-    <section id="life" class="mt-5">
-      <h2 class="section-title">Life Cover</h2>
-      <p>
-        Protect your family’s future today with our comprehensive life cover options.
-        Ensure your loved ones are taken care of, no matter what tomorrow brings.
-      </p>
-    </section>
-
-    <!-- Retirement Annuity Section -->
-    <section id="retirement" class="mt-5">
-      <h2 class="section-title">Retirement Annuity</h2>
-      <p>
-        Planning for the future is vital. Our retirement annuity plans allow you to build a secure nest egg
-        so you can relax and enjoy your golden years without worry.
-      </p>
-    </section>
-
-    <!-- Testimonials Carousel -->
-    <section id="testimonials" class="mt-5">
-      <h2 class="section-title">What Our Clients Say</h2>
-      <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="testimonial-card">
-              <p><i class="fas fa-quote-left"></i> Real Financial helped me secure my family’s future with ease and professionalism. Highly recommended! <i class="fas fa-quote-right"></i></p>
-              <small>- Thandi M.</small>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="testimonial-card">
-              <p><i class="fas fa-quote-left"></i> Their customer service is amazing and they explained every detail clearly. I feel so much more confident now. <i class="fas fa-quote-right"></i></p>
-              <small>- Sipho N.</small>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="testimonial-card">
-              <p><i class="fas fa-quote-left"></i> Affordable and reliable plans for retirement and life cover. Thank you, Real Financial! <i class="fas fa-quote-right"></i></p>
-              <small>- Lerato K.</small>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="mt-5">
-      <h2 class="section-title">Get in Touch</h2>
-      <form id="contactForm" novalidate>
-        <div class="mb-3">
-          <label for="name" class="form-label">Full Name*</label>
-          <input type="text" class="form-control" id="name" placeholder="Your full name" required />
-          <div class="invalid-feedback">Please enter your name.</div>
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address*</label>
-          <input type="email" class="form-control" id="email" placeholder="name@example.com" required />
-          <div class="invalid-feedback">Please enter a valid email.</div>
-        </div>
-        <div class="mb-3">
-          <label for="message" class="form-label">Message*</label>
-          <textarea class="form-control" id="message" rows="4" placeholder="Your message here" required></textarea>
-          <div class="invalid-feedback">Please enter your message.</div>
-        </div>
-        <button type="submit" class="btn btn-orange">Send Message</button>
-      </form>
-    </section>
-
-    <!-- Map Section -->
-    <section id="location" class="mt-5">
-      <h2 class="section-title">Find Us</h2>
-      <div style="width: 100%; height: 400px;">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.135290398363!2d28.04965401502154!3d-26.140753483487366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956a146d5937b1%3A0x54a7ab2b4a3298a6!2s39%20Ferguson%20Rd%2C%20Illovo%2C%20Johannesburg%2C%202146!5e0!3m2!1sen!2sza!4v1688344970734!5m2!1sen!2sza"
-          width="100%"
-          height="100%"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-          title="Real Financial Services Location"
-        ></iframe>
-      </div>
-    </section>
-  </div>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Real Financial Services | 39 Ferguson Road, Illovo | Tel: 0607225580</p>
-  </footer>
-
-  <!-- Bootstrap JS bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Contact Form Validation Script -->
-  <script>
-    (() => {
-      'use strict';
-
-      const form = document.getElementById('contactForm');
-
-      form.addEventListener('submit', function (event) {
-        event.preventDefault();
-        event.stopPropagation();
-
-        if (!form.checkValidity()) {
-          form.classList.add('was-validated');
-          return;
-        }
-
-        alert('Thank you for reaching out! We will get back to you soon.');
-        form.reset();
-        form.classList.remove('was-validated');
-      });
-    })();
-  </script>
-
-</body>
-</html>
-
+<html><body><h1>Real Financial Services Home</h1></body></html>
