--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
-<html><body><h1>Real Financial Services Home</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Real Financial Services</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
+    .navbar {
+      background-color: #ff6600;
+    }
+    .carousel-caption {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 20px;
+      border-radius: 10px;
+    }
+    .btn-orange {
+      background-color: #ff6600;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      transition: all 0.3s ease;
+    }
+    .btn-orange:hover {
+      background-color: #e65c00;
+      transform: scale(1.05);
+    }
+    footer {
+      background-color: #111;
+      color: #aaa;
+      padding: 20px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Real Financial Services</a>
+    </div>
+  </nav>
+
+  <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://images.unsplash.com/photo-1581091870620-dba4c89f7a91?fit=crop&w=1200&q=80" class="d-block w-100" alt="Funeral Cover">
+        <div class="carousel-caption d-none d-md-block">
+          <h2>Funeral Cover</h2>
+          <p>Secure peace of mind for your loved ones.</p>
+          <a href="funeral.html" class="btn btn-orange">Read More</a>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://images.unsplash.com/photo-1511988617509-a57c8a288659?fit=crop&w=1200&q=80" class="d-block w-100" alt="Life Cover">
+        <div class="carousel-caption d-none d-md-block">
+          <h2>Life Cover</h2>
+          <p>Protect your family’s future today.</p>
+          <a href="life.html" class="btn btn-orange">Read More</a>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://images.unsplash.com/photo-1554224155-4b6e6a0f33f1?fit=crop&w=1200&q=80" class="d-block w-100" alt="Retirement">
+        <div class="carousel-caption d-none d-md-block">
+          <h2>Retirement Annuity</h2>
+          <p>Plan now, relax later. Your retirement, secured.</p>
+          <a href="retirement.html" class="btn btn-orange">Read More</a>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Real Financial Services | 39 Ferguson Road, Illovo | Tel: 060 722 5580</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
