--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,1 @@
-<html><body><h1>Contact Us</h1><p>Visit us at 39 Ferguson Road, Illovo or call us on 060 722 5580.</p></body></html>
+<h1>Contact Us</h1><p>Email: support@realfinancial.co.za<br>Phone: 0607225580<br>Visit us: 39 Ferguson Road, Illovo</p>
