--- a/funeral.html
+++ b/funeral.html
@@ -1,1 +1,1 @@
-<html><body><h1>Funeral Cover</h1><p>Affordable plans to give your loved ones the send-off they deserve.</p></body></html>
+<h1>Funeral Cover</h1><p>Our affordable funeral cover gives your family the support they need during tough times.</p>
