--- a/life.html
+++ b/life.html
@@ -1,1 +1,1 @@
-<html><body><h1>Life Insurance</h1><p>Protect your family's future with our life cover options.</p></body></html>
+<h1>Life Cover</h1><p>Enjoy peace of mind with life cover that protects your family's future.</p>
