--- a/retirement.html
+++ b/retirement.html
@@ -1,1 +1,1 @@
-<html><body><h1>Retirement Annuity</h1><p>Start planning today for a worry-free retirement tomorrow.</p></body></html>
+<h1>Retirement Annuity</h1><p>Start saving today for a secure and comfortable retirement tomorrow.</p>
