--- a/about.html
+++ b/about.html
@@ -1,1 +1,1 @@
-<html><body><h1>About Us</h1><p>We offer funeral cover, life cover, and retirement annuity. Our plans are affordable and designed to secure your future with peace of mind.</p></body></html>
+<h1>About Us</h1><p>At Real Financial Services, we specialize in funeral and life cover, as well as retirement annuities. Our mission is to make financial security affordable for every South African household. We believe in transparency, reliability, and offering tailored solutions for your future.</p>
