--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body {
-      background-color: #000;
+      background-color: #111;
       color: #fff;
       font-family: Arial, sans-serif;
     }
@@ -15,7 +15,7 @@
       background-color: #ff6600;
     }
     .carousel-caption {
-      background-color: rgba(0, 0, 0, 0.7);
+      background-color: rgba(0, 0, 0, 0.6);
       padding: 20px;
       border-radius: 10px;
     }
@@ -41,14 +41,13 @@
   </style>
 </head>
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Real Financial Services</a>
     </div>
   </nav>
 
-  <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000">
+  <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="https://images.unsplash.com/photo-1581091870620-dba4c89f7a91?fit=crop&w=1200&q=80" class="d-block w-100" alt="Funeral Cover">
@@ -86,7 +85,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Real Financial Services | 39 Ferguson Road, Illovo | Tel: 060 722 5580</p>
+    <p>&copy; 2025 Real Financial Services | 39 Ferguson Road, Illovo | Tel: 0607225580</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
